<resources>
    <string name="app_name">LearnSphere</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="change_password">Change Password</string>
    <string name="update_info">Update Information</string>
    <string name="create">Create new Account</string>
    <string name="already">Already Registered? Log in here.</string>
    <string name="not_yet">Not a member yet? Register here!</string>
    <string name="forgot_pass_title">Forgot\nPassword</string>
    <string name="forgot_pass_subtitle">New password</string>
    <string name="forgot_pass_button">SEND</string>
    <string name="save_button">SAVE</string>
    <string name="forgot_pass_return"><u>Click here to return</u></string>
    <string name="authenticate">Authenticate <i>(False)</i></string>

    <string name="hint_mail">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_name">Enter name</string>

    <string name="name_tv">NAME</string>
    <string name="email_tv">EMAIL</string>
    <string name="password_tv">PASSWORD</string>
    <string name="signup_login_gg">SIGN UP/LOG IN with Google</string>

    <string name="forgot">Forgot the Password?</string>
    <string name="sign_up_here">Back to Sign Up</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="client_id">399120246442-4m1mfbgh0429391suknjkaqcpgnutepa.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_home">Home</string>
    <string name="nav_chats">Chats</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share">Share</string>
    <string name="nav_about">About us</string>
    <string name="nav_logout">Log out</string>

    <string name="nobody">NULL</string>

    <string name="add_title">Add Files</string>
    <string name="add_subject">Select subject</string>

    <string name="confirm_pass">Confirm Password</string>
    <string name="new_pass">New Password</string>
    <string name="current_pass">Current Password</string>

    <string name="already_verified">Authenticate <i>(Verified)</i></string>
    <string name="to_do">To-Do List</string>
</resources>