<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".welcome.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newmember_text"
        android:text="@string/create"
        android:fontFamily="@font/font"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alreadymember_text"
        android:text="@string/already"
        android:fontFamily="@font/font"
        android:textSize="20sp"
        android:layout_below="@+id/newmember_text"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_tv"
        android:fontFamily="@font/font"
        android:layout_below="@id/alreadymember_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:background="@drawable/login_edittext"
        android:layout_marginHorizontal="30dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:layout_below="@id/text2"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_name"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_tv"
        android:id="@+id/email_tv"
        android:layout_below="@id/nameEditText"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/font"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:layout_below="@id/email_tv"
        android:background="@drawable/login_edittext"
        android:layout_marginHorizontal="30dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_tv"
        android:id="@+id/pass_tv"
        android:layout_below="@id/emailEditText"
        android:fontFamily="@font/font"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEditText"
        android:layout_below="@id/pass_tv"
        android:background="@drawable/login_edittext"
        android:layout_marginHorizontal="30dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signupButton"
        android:text="@string/signup"
        android:fontFamily="@font/font"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/signup_button"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:padding="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/googleSignupButton"
        android:text="@string/signup_login_gg"
        android:fontFamily="@font/font"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/signup_button"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:layout_below="@id/signupButton"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:drawableBottom="@drawable/google36"
        android:padding="10dp"
        android:visibility="gone"/>
</RelativeLayout>