<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".welcome.ForgotPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_pass_title"
        android:text="@string/forgot_pass_title"
        android:fontFamily="@font/font"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_pass_subtitle"
        android:text="@string/forgot_pass_subtitle"
        android:fontFamily="@font/font"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@+id/forgot_pass_title"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_tv"
        android:fontFamily="@font/font"
        android:layout_below="@id/forgot_pass_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_password_email_edittext"
        android:background="@drawable/login_edittext"
        android:layout_marginHorizontal="30dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:layout_below="@id/text2"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:hint="@string/hint_mail"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_pass_button"
        android:text="@string/forgot_pass_button"
        android:fontFamily="@font/font"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/signup_button"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:layout_below="@id/forgot_password_email_edittext"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_pass_return"
        android:text="@string/forgot_pass_return"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:layout_below="@+id/forgot_pass_button"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>



</RelativeLayout>