<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".welcome.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newmember_text"
        android:text="@string/login"
        android:fontFamily="@font/font"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/not_member_text"
        android:text="@string/not_yet"
        android:fontFamily="@font/font"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@+id/newmember_text"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_tv"
        android:fontFamily="@font/font"
        android:layout_below="@id/not_member_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText_login"
        android:background="@drawable/login_edittext"
        android:layout_marginHorizontal="30dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:layout_below="@id/text2"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:hint="@string/hint_mail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_tv"
        android:id="@+id/email_tv"
        android:layout_below="@id/emailEditText_login"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/font"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEditText_login"
        android:layout_below="@id/email_tv"
        android:background="@drawable/login_edittext"
        android:layout_marginHorizontal="30dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_password"
        android:textColor="@color/black"
        android:inputType="textPassword"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_pass_tv"
        android:layout_below="@+id/passwordEditText_login"
        android:layout_marginTop="5dp"
        android:text="@string/forgot"
        android:fontFamily="@font/font"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentEnd="true"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/login"
        android:fontFamily="@font/font"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/signup_button"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:layout_below="@id/passwordEditText_login"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:padding="10dp"/>


</RelativeLayout>