<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/profile_avatar"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/profile_image"
        android:src="@drawable/google192"
        android:fitsSystemWindows="true"
        android:contentDescription="@string/nobody"
        android:scaleType="fitCenter"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/nobody"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_email"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/nobody"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_phone"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/nobody"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_avatar_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/change_avatar"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_password_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/change_password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/update_profile_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/update_info"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout_profile_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/nav_logout"/>


</LinearLayout>