<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".func.ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:elevation="3dp"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:src="@drawable/ic_back"
            android:contentDescription="back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Change Password"
            android:fontFamily="@font/font"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="HardcodedText"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="5dp"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_pass"
                android:fontFamily="@font/font"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/current_password_edittext"
                android:background="@drawable/login_edittext"
                android:padding="15dp"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:fontFamily="@font/font"
                android:autofillHints="password"
                android:hint="@string/current_pass"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_pass"
                android:fontFamily="@font/font"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_password_edittext"
                android:background="@drawable/login_edittext"
                android:padding="15dp"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:hint="@string/new_pass"
                android:textColor="@color/black"
                android:fontFamily="@font/font"
                android:autofillHints="password"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_pass"
                android:id="@+id/email_tv"
                android:fontFamily="@font/font"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirm_password_edittext"
                android:background="@drawable/login_edittext"
                android:padding="15dp"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:hint="@string/confirm_pass"
                app:passwordToggleTint="@color/black"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:autofillHints="password"
                android:inputType="textPassword"/>
            <Button
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/change_button"
                android:text="@string/save_button"
                android:fontFamily="@font/font"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/signup_button"
                app:backgroundTint="@null"
                android:textColor="@color/white"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_gravity="center_horizontal"
                android:padding="15dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

