<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".func.add.AddFilesActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:elevation="3dp"
            android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/back"
                    android:src="@drawable/ic_back"
                    android:contentDescription="bak"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Add Files"
                    android:fontFamily="@font/font"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_below="@+id/title">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="5dp"
                    android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_subject"
                            android:fontFamily="@font/font"
                            android:layout_marginTop="40dp"
                            android:layout_marginStart="30dp"
                            android:textColor="@color/black"/>


                        <AutoCompleteTextView
                            android:id="@+id/auto_complete_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/font"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:inputType="none"
                            android:layout_marginHorizontal="30dp"
                            android:completionThreshold="1"
                            tools:ignore="LabelFor" />

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/upload_img"
                            android:id="@+id/upload_file"
                            android:layout_marginTop="30dp"
                            android:scaleType="fitXY"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/nobody"
                            android:visibility="gone"/>
                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/upload_img"
                            android:id="@+id/try_upload_file"
                            android:layout_marginTop="30dp"
                            android:scaleType="fitXY"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/nobody"/>


                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="50dp"
                            android:id="@+id/file_list"
                            android:visibility="gone"/>

                        <Button
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:text="@string/save_button"
                            android:id="@+id/saveButton"
                            android:fontFamily="@font/font"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:padding="15dp"
                            android:textColor="@color/white"
                            android:background="@drawable/signup_button"
                            android:layout_marginTop="30dp"
                            android:layout_gravity="center_horizontal"
                            app:cornerRadius="20dp"
                            android:visibility="gone"/>

                        <Button
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:text="@string/save_button"
                            android:id="@+id/tryButton"
                            android:fontFamily="@font/font"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:padding="15dp"
                            android:textColor="@color/white"
                            android:background="@drawable/signup_button"
                            android:layout_marginTop="30dp"
                            android:layout_gravity="center_horizontal"
                            app:cornerRadius="20dp"/>


                </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progess_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
</RelativeLayout>